smtlib/src/snapshots/smtlib__proc__tests__z3_ill_formed.snap
---
source: smtlib/src/proc.rs
expression: r.unwrap_err()
---
solver returned an error:
line 6 column 8: unknown constant p
